# iris

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HELP.md  README.md  iris-gui-README.md  iris-irix53.toml  iris-irix65.toml  iris.toml  manual_test_runbook.md  mcm-engine.yaml
docs/: RESUME-networking-nfs.md  appstore-review-response.md  cow-chd-sync-plan.md  idle-pause-work.md  interrupt_map.md  irix-6.5.22-install.md  irix-install.md  n64_gio_specs.md  networking-tab-redesign.md  nfsudp-plan.md  nfsv3udp-plan.md  pcap-release-plan.md  suppaftp-emu-fork-prompt.md  ultra64.md  wd33c93a.md  xdmcp.md
installer/: iris-gui-notarized.entitlements  iris-gui-sandbox-local.entitlements  iris-gui.entitlements  iris-gui.iss
installer/linux/: postinst
installer/macos/chmod-bpf/: ChmodBPF  io.github.danifunker.iris.ChmodBPF.plist
iris-gui/: Cargo.toml  build.rs
iris-gui/src/: camera_test.rs  capture_access.rs  config_ui.rs  dialogs.rs  framebuffer.rs  handle.rs  input.rs  macos_sandbox.rs  main.rs  netfix.rs  netplan.rs  safe_stop.rs  scsi_menu.rs  serial_console.rs  settings.rs  single_instance.rs
iris-gui/src/dialogs/: create_disk.rs  new_machine.rs
rules/gui/: 01-overview.md  cmd-q-bypasses-close-intercept-fold-on-poweroff.md  egui-default-font-glyph-coverage-avoid-tofu.md  gl-teardown-must-run-on-the-refresh-thread.md  gui_mouse_integration.md  keyboard-capture-egui-steals-tab-arrows-esc-and-ctrl-cxv.md
rules/irix/: irix-csh-scratch-raw-device-gotchas-when-you-cant-use-iris-ci.md  networking.md  nfs-readdir-must-respect-count-and-fit-one-datagram.md  vino-attach-via-sysid-bit4.md  vino-capture-on-6.5-progress.md
rules/macos/: appstore-private-api.md  chd-fold-needs-folder-grant-not-file-grant.md  test-the-app-sandbox-locally-without-the-app-store.md
rules/perf/: rex3-processor-must-park-when-idle.md
rules/scsi/: openbsd.md
rules/snapshot/: ci-mode-overlay-path-is-tmpiris-ci-pid-scsiidoverlay.md  iris-ci-is-the-canonical-ci-socket-interface.md  snapshot-manifest-format-snapshottoml-schema-version1.md  snapshot-v2-device-state-is-postcard-encoded-binvalue-bin.md
rules/testing/: chd-disks-need-features-chd-at-build-time.md
scripts/: build-macos.sh
src/: camera.rs  camera_nokhwa.rs  camera_v4l.rs  cdmc.rs  chd_disk.rs  chunk_store.rs  ci.rs  cmap.rs  compositor.rs  config.rs  cow_disk.rs  debug_overlay.rs  devlog.rs  disp.rs  ds1x86.rs  gl_compositor.rs  hpc3.rs  ioc.rs  iris_ci_main.rs  lib.rs  machine.rs  main.rs  mc.rs  mem.rs  mips_cache_v2.rs  mips_core.rs  mips_exec.rs  mips_tlb.rs  mips_tlb_test.rs  monitor.rs  net.rs  net_pcap.rs  nfsudp.rs  nfsv3udp.rs  physical.rs  ps2.rs  rex3.rs  scsi.rs  seeq8003.rs  snapshot.rs  (+8 more)
src/jit/: compiler.rs
test/dktest/: dktest
test/gltest/: gltest
test/ib/: iris_bench  iris_bench.c  iris_bench_irix.sh  iris_bench_linux.sh
tools/: inst-drive.sh  inst-resolve.py  iris-test
