[package]
name = "iris-gui"
version = "0.1.0"
edition = "2021"
description = "SGI Indy (MIPS R4400) emulator"
license = "BSD-3-Clause"

[package.metadata.deb]
maintainer = "Dani Sarfati <dani@funkervogt.com>"
copyright = "2025 Dani Sarfati"
license-file = "../LICENSE"
extended-description = "IRIS emulates an SGI Indy workstation (MIPS R4400) and boots IRIX 6.5 and 5.3 to a usable system with shell, networking, and X11."
# `$auto` runs dpkg-shlibdeps, which resolves the pcap variant's libpcap link to
# the correctly-versioned package name for the build's distro — including the
# Ubuntu 24.04 `t64` rename (libpcap0.8 -> libpcap0.8t64). That's why we DON'T
# hardcode libpcap here: a literal name would break on noble, and would also be
# over-broad on the standard/lightning debs that don't link libpcap at all.
depends = "$auto"
# PCAP (bridged) networking: setcap the binary at install so it captures without
# root. See installer/linux/postinst (best-effort; falls back to in-app pkexec).
maintainer-scripts = "../installer/linux"
section = "games"
priority = "optional"
# Asset source paths are resolved relative to this package dir (iris-gui/),
# NOT the workspace root — so they must not carry an `iris-gui/` prefix or it
# doubles to iris-gui/iris-gui/... The `target/...` binary path is special-cased
# by cargo-deb (rewritten to target/<triple>/release with --target).
assets = [
  ["target/release/iris-gui", "usr/bin/iris-gui", "755"],
  ["assets/icons/icon-256.png", "usr/share/icons/hicolor/256x256/apps/iris-gui.png", "644"],
  ["assets/icons/icon-128.png", "usr/share/icons/hicolor/128x128/apps/iris-gui.png", "644"],
  ["assets/icons/icon-64.png", "usr/share/icons/hicolor/64x64/apps/iris-gui.png", "644"],
  ["iris-gui.desktop", "usr/share/applications/iris-gui.desktop", "644"],
]

[package.metadata.generate-rpm]
# cargo-generate-rpm does NOT auto-detect shared-lib deps, so list libpcap
# explicitly for the pcap variant. Harmless on standard/lightning rpms (libpcap
# is a tiny, near-universal package). The rpm names it `libpcap` on Fedora/RHEL.
requires = { libpcap = "*" }
# PCAP: setcap the binary at install so it captures without root (mirrors the deb
# postinst). Best-effort; capture falls back to the in-app pkexec elevation.
post_install_script = '''
if command -v setcap >/dev/null 2>&1; then
    setcap cap_net_raw,cap_net_admin+eip /usr/bin/iris-gui 2>/dev/null || true
fi
'''
assets = [
  { source = "target/release/iris-gui", dest = "/usr/bin/iris-gui", mode = "755" },
  { source = "assets/icons/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/iris-gui.png", mode = "644" },
  { source = "iris-gui.desktop", dest = "/usr/share/applications/iris-gui.desktop", mode = "644" },
]

[features]
# Pre-compiled / distributed build. Hides developer-only affordances that don't
# make sense for users running an official binary — currently the iris.toml
# import/export menu items (the GUI's gui.json machine store is the system of
# record; iris.toml is only useful alongside the standalone `iris` CLI, i.e. a
# source checkout). Set by the Release and App Store workflows. A no-op for
# source builds, where the iris.toml workflow stays available.
bundled = []
# Mac App Store distribution build. Implies `bundled`, and additionally hides
# the CI/Automation config tab (the iris-ci socket is a developer automation
# feature unusable in the sandbox). Set by .github/workflows/appstore.yml.
appstore = ["bundled"]
# PCAP bridged networking. Off by default because it adds a hard build-time
# dependency on a pcap library (libpcap headers on Unix, a WinPcap-compatible
# `wpcap` SDK on Windows). When enabled, the Network tab can enumerate host
# interfaces in a dropdown and the in-process VM can actually bridge onto them.
# Build with: cargo build -p iris-gui --features pcap
pcap = ["iris/pcap"]
# Emulate an R5000 CPU instead of the default R4400 (compile-time: the cache
# model differs deeply). Surfaced read-only on the Memory tab via
# iris::build_features::CPU. Build with: cargo build -p iris-gui --features r5k
r5k = ["iris/r5k"]

[dependencies]
# Group A (additive) features are always on for iris-gui so the user can
# enable them at runtime via the config UI: chd (.chd disk paths), camera
# (vino source), jit (IRIS_JIT toggle), rex-jit. They add code paths and
# native dependencies but no runtime cost when unused.
iris = { path = "..", features = ["chd", "camera", "jit", "rex-jit"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
crossbeam-channel = "0.5"
parking_lot = "0.12"
# Match iris's winit version — Ps2Controller::push_kb takes
# winit::keyboard::KeyCode.
winit = "0.29"
png = "0.17"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.10"
# Read the host's own interface addresses (Networking tab: first-free subnet
# presets + overlap warnings). Reads addresses via getifaddrs — no entitlement,
# and it does not trigger the macOS 15 Local Network prompt (that's for talking
# *to* LAN peers, not enumerating your own NICs).
if-addrs = "0.13"

# macOS App Sandbox: NSURL security-scoped bookmarks let the App Store build
# reopen user-selected disk images / PROMs / ISOs across launches. These crates
# are already in the build graph (eframe/winit/rfd pull them in); we enable a
# few extra type features and use them only under `feature = "appstore"`.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSData", "NSError", "NSString", "NSArray",
] }

[[bin]]
name = "iris-gui"
path = "src/main.rs"
